fix issue when selecting clientmatter rows overlaps

--- a/packages/web/src/assets/styles/Inbox.css
+++ b/packages/web/src/assets/styles/Inbox.css
@@ -1,3 +1,4 @@
 .ReactVirtualized__Grid__innerScrollContainer {
-  min-height: 800px !important; 
+  min-height: 800px !important;
+  z-index: 1;
 }
